feat: grants for inactive identities
- rename inactive to unlinked
