# docs/api/openapi3.json
@@ -1930,9 +1930,11 @@
             }
           },
           {
+            "description": "Show identities that exist in grants but are not linked to an identity provider",
             "in": "query",
-            "name": "showInactive",
+            "name": "includeUnlinked",
             "schema": {
+              "description": "Show identities that exist in grants but are not linked to an identity provider",
               "type": "boolean"
             }
           }
